Refactoring: SpellChecker::requestCheckingFor should take Range instead of Node. https://bugs.webkit.org/show_bug.cgi?id=72847

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-11-21
Reviewed by Hajime Morita.

Covered by existing test.

* editing/Editor.cpp:
(WebCore::Editor::replaceSelectionWithFragment):
  Passes Range to requestCheckingFor instead of Node.
* editing/SpellChecker.cpp:
  Changed argument type from Node to Range.
  The corresponding changes are also done in dependent methods.
(WebCore::SpellChecker::initRequest):
(WebCore::SpellChecker::clearRequest):
(WebCore::SpellChecker::canCheckAsynchronously):
(WebCore::SpellChecker::isBusy):
(WebCore::SpellChecker::isValid):
(WebCore::SpellChecker::isCheckable):
(WebCore::SpellChecker::requestCheckingFor):
  Changed argument type from Node to Range.
(WebCore::SpellChecker::doRequestCheckingFor):
(WebCore::SpellChecker::didCheck):
* editing/SpellChecker.h:

Canonical link: https://commits.webkit.org/89379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100890 268f45cc-cd09-0410-ab3c-d52691b4dbfc